--- a/gofood-frontend/src/assets/sass/_hero.scss
+++ b/gofood-frontend/src/assets/sass/_hero.scss
@@ -1,6 +1,8 @@
 /*---------------------
   Hero
 -----------------------*/
+
+
 .hero {
     padding-bottom: 50px;
 
@@ -177,6 +179,7 @@
     display: flex;
     align-items: center;
     padding-left: 75px;
+    background-image: url('../img/hero/banner.jpg');
 }
 
 .hero__text {
