add store detail

--- a/gofood-frontend/src/assets/sass/_breadcrumb.scss
+++ b/gofood-frontend/src/assets/sass/_breadcrumb.scss
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     padding: 45px 0 40px;
+    background-image: url('../img/breadcrumb.jpg');
 }
 
 .breadcrumb__text {
