--- a/gofood-frontend/src/assets/sass/_header.scss
+++ b/gofood-frontend/src/assets/sass/_header.scss
@@ -2,6 +2,15 @@
   Header
 -----------------------*/
 
+
+.header{
+    border-bottom-style: solid;
+    border-image: linear-gradient(139deg, #fb8817, #ff4b01, #c12127, #e02aff) 3;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    box-shadow: 0 1px 2px rgb(0 0 0 / 10%);
+}
 .header__top {
     background: #f5f5f5;
 }
